--- a/app/src/main/res/layout/activity_fed_schools.xml
+++ b/app/src/main/res/layout/activity_fed_schools.xml
@@ -92,14 +92,24 @@
         <fragment
             android:id="@+id/frag_sortby_fedschActivity"
             android:name="com.example.universitytest2.FedSchActivityFilterList"
-            android:layout_width="160dp"
+            android:layout_width="165dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
-            android:layout_marginLeft="5dp"
             android:layout_marginTop="10dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-             />
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <fragment
+            android:id="@+id/frag_schoolList_fedActivity"
+            android:name="com.example.universitytest2.FedschActivitySchoolsList"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="5dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/frag_sortby_fedschActivity"
+            app:layout_constraintTop_toTopOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
