--- a/app/src/main/res/layout/fragment_fed_sch_activity_filter_list.xml
+++ b/app/src/main/res/layout/fragment_fed_sch_activity_filter_list.xml
@@ -8,7 +8,7 @@
 
 
     <ListView
-        android:id="@+id/lst_fedAct_filteredBy"
+        android:id="@+id/lst_fedAct_filterBy"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </LinearLayout>
