--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,32 +25,8 @@
             android:layout_weight="0"
             android:text="Home"
             android:textColor="#FFFFFF"
-             />
+            app:backgroundTint="@color/primaryDark" />
 
-        <EditText
-            android:id="@+id/txt_search_fedschActivity"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginEnd="5dp"
-            android:layout_marginRight="5dp"
-            android:layout_marginBottom="20dp"
-            android:layout_weight="1"
-            android:ems="12"
-            android:hint="type uni name"
-            android:inputType="none" />
-
-        <SearchView
-            android:id="@+id/bt_search_fedschActivity"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="5dp"
-            android:layout_marginEnd="3dp"
-            android:layout_marginRight="3dp"
-            android:layout_marginBottom="20dp"
-            android:layout_weight="1" />
     </LinearLayout>
 
     <LinearLayout
@@ -70,16 +46,22 @@
             android:layout_marginEnd="50dp"
             android:layout_marginRight="50dp"
             android:layout_marginBottom="10dp"
+            android:backgroundTint="#ad5"
             android:clickable="true"
             android:fontFamily="sans-serif-black"
             android:gravity="center|center_horizontal"
             android:minHeight="120dip"
-            android:paddingTop="4dp"
-            android:paddingBottom="4dp"
+            android:shadowColor="#9910350C"
+
+
+            android:shadowDx="8"
+            android:shadowDy="10"
+            android:shadowRadius="6"
             android:text="FEDERAL UNIVERSITIES"
+            android:textColor="@android:color/white"
             android:textSize="18sp"
-            android:backgroundTint="@color/primary"
-            app:iconPadding="8dp" />
+            app:backgroundTint="#ad5"
+            app:cornerRadius="30dp" />
 
         <Button
             android:id="@+id/stateUnibt"
@@ -95,10 +77,15 @@
             android:fontFamily="sans-serif-black"
             android:gravity="center|center_horizontal"
             android:minHeight="120dip"
+            android:shadowColor="#9910350C"
+            android:shadowDx="8"
+            android:shadowDy="10"
+            android:shadowRadius="6"
             android:text="STATE UNIVERSITIES"
+            android:textColor="@android:color/white"
             android:textSize="18sp"
-            app:backgroundTint="@color/primary"
-             />
+            app:backgroundTint="#ad5"
+            app:cornerRadius="30dp" />
 
         <Button
             android:id="@+id/privateUnibt"
@@ -114,11 +101,16 @@
             android:fontFamily="sans-serif-black"
             android:gravity="center|center_horizontal"
             android:minHeight="120dip"
+            android:shadowColor="#9910350C"
+            android:shadowDx="8"
+            android:shadowDy="10"
+            android:shadowRadius="6"
             android:text="PRIVATE UNIVERSITIES"
-            android:textColor="@color/white"
+
+            android:textColor="@android:color/white"
             android:textSize="18sp"
-            app:backgroundTint="@color/primary"
-             />
+            app:backgroundTint="#ad5"
+            app:cornerRadius="30dp" />
 
     </LinearLayout>
 
