--- a/app/src/main/res/layout/activity_school_details.xml
+++ b/app/src/main/res/layout/activity_school_details.xml
@@ -6,38 +6,42 @@
     android:layout_height="match_parent"
     android:layout_marginStart="0dp"
     android:layout_marginLeft="0dp"
+    android:background="@color/primaryLight"
     android:orientation="vertical">
 
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/primaryLight"
         android:orientation="horizontal">
 
         <Button
             android:id="@+id/bt_home_schoolDetail_activity"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginBottom="20dp"
+            android:layout_marginStart="0dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginBottom="10dp"
             android:layout_weight="1"
             android:text="Home"
             android:textColor="#FFFFFF"
-            />
+            android:textSize="12sp"
+            app:backgroundTint="@color/primaryDark"
+            app:iconPadding="0dp" />
 
         <EditText
             android:id="@+id/txt_search_schooldetailActivity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginLeft="20dp"
+            android:layout_marginStart="25dp"
+            android:layout_marginLeft="0dp"
             android:layout_marginEnd="5dp"
-            android:layout_marginRight="5dp"
+            android:layout_marginRight="0dp"
             android:layout_marginBottom="20dp"
             android:layout_weight="1"
+            android:background="@color/primaryDark"
             android:ems="12"
             android:hint="type uni name"
             android:inputType="none" />
@@ -55,7 +59,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/primaryLight">
 
         <TextView
             android:id="@+id/textView"
@@ -64,8 +69,12 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:gravity="bottom|center|start|right"
+            android:shadowDx="0"
             android:text="Name of School:"
             android:textAlignment="center"
+            android:textColor="@color/primary"
+            android:textSize="16sp"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -76,6 +85,10 @@
             android:layout_marginStart="5dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="5dp"
+            android:fontFamily="sans-serif-black"
+            android:textColor="@android:color/black"
+            android:textSize="16sp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textView"
             app:layout_constraintTop_toTopOf="parent" />
@@ -85,12 +98,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="30dp"
             android:gravity="bottom|center|start|right"
-            android:text="State"
+            android:shadowColor="@color/black"
+            android:text="State:"
             android:textAlignment="center"
+            android:textColor="@color/primary"
+            android:textSize="16sp"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
+            app:layout_constraintTop_toTopOf="@+id/tv_statename" />
 
         <TextView
             android:id="@+id/tv_statename"
@@ -99,6 +115,8 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="30dp"
             android:layout_marginEnd="10dp"
+            android:textColor="@android:color/black"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textView3"
             app:layout_constraintTop_toBottomOf="@+id/tv_schoolName" />
@@ -108,12 +126,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="30dp"
             android:gravity="bottom|center|start|right"
-            android:text="Website"
+            android:shadowColor="@color/black"
+            android:text="Website:"
             android:textAlignment="center"
+            android:textColor="@color/primary"
+            android:textSize="16sp"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView3" />
+            app:layout_constraintTop_toTopOf="@+id/tv_website" />
 
         <TextView
             android:id="@+id/tv_website"
@@ -122,31 +143,28 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="30dp"
             android:layout_marginEnd="10dp"
+            android:autoLink="web"
+            android:shadowRadius="1"
+            android:textColor="@android:color/holo_blue_dark"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textView6"
             app:layout_constraintTop_toBottomOf="@+id/tv_statename" />
 
-        <TextView
-            android:id="@+id/textView8"
+
+        <com.google.android.gms.ads.AdView
+            xmlns:ads="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/adView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="30dp"
-            android:gravity="bottom|center|start|right"
-            android:text="Ranking"
-            android:textAlignment="center"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView6" />
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"
+            ads:adSize= "LARGE_BANNER"
+            ads:adUnitId="ca-app-pub-6382357069953575/5317928831"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent">
+        </com.google.android.gms.ads.AdView>
 
-        <TextView
-            android:id="@+id/textView9"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="30dp"
-            android:text="Coming Soon!!!"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/textView8"
-            app:layout_constraintTop_toBottomOf="@+id/tv_website" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
