--- a/app/src/main/res/layout/activity_state_schools.xml
+++ b/app/src/main/res/layout/activity_state_schools.xml
@@ -17,13 +17,12 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/bt_home_fedSchActivity"
+            android:id="@+id/bt_home_stateSchActivity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
             android:text="Home"
             android:textColor="#FFFFFF"
-            android:textSize="12sp"
             app:backgroundTint="@color/primaryDark"
             app:iconPadding="0dp" />
 
@@ -35,14 +34,16 @@
             android:background="@color/primaryLight">
 
             <ListView
-                android:id="@+id/searchForLV"
+                android:id="@+id/searchForLVstate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/bt_search_fedschActivity"
-                android:visibility="visible" />
+                android:layout_below="@id/bt_search_stateschActivity"
+                android:divider="#ad5"
+                android:dividerHeight="1dp"
+                android:visibility="invisible" />
 
             <SearchView
-                android:id="@+id/bt_search_fedschActivity"
+                android:id="@+id/bt_search_stateschActivity"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
@@ -67,11 +68,11 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@android:color/holo_green_light"
+            android:background="@color/primaryLight"
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/tv_sortby_fedschActivity"
+                android:id="@+id/tv_sortby_stateschActivity"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
@@ -84,7 +85,7 @@
                 android:textStyle="bold" />
 
             <Spinner
-                android:id="@+id/spinner_fedschActivity"
+                android:id="@+id/spinner_stateschActivity"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="0"
@@ -100,7 +101,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="170dp"
-        android:text="FEDERAL UNIVERSITIES"
+        android:text="STATE UNIVERSITIES"
         android:textAlignment="center"
         android:textColor="@android:color/holo_green_dark"
         android:textSize="12sp" />
@@ -108,11 +109,11 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/white">
+        android:background="@color/primaryLight">
 
         <fragment
-            android:id="@+id/frag_sortby_fedschActivity"
-            android:name="com.angelightmedia.universitytest2.FedSchActivityFilterList"
+            android:id="@+id/frag_sortby_stateschActivity"
+            android:name="com.angelightmedia.universitytest2.StateSchActivityFilterList"
             android:layout_width="165dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
@@ -121,14 +122,14 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <fragment
-            android:id="@+id/frag_schoolList_fedActivity"
-            android:name="com.angelightmedia.universitytest2.FedschActivitySchoolsList"
+            android:id="@+id/frag_schoolList_stateActivity"
+            android:name="com.angelightmedia.universitytest2.StateSchActivitySchools"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="5dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/frag_sortby_fedschActivity"
+            app:layout_constraintStart_toEndOf="@+id/frag_sortby_stateschActivity"
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
